--- a/project/package.json
+++ b/project/package.json
@@ -9,7 +9,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "5.1.2",
     "react-scripts": "5.0.1",
     "reselect": "^4.0.0"
   },
@@ -50,6 +50,7 @@
     "@types/react": "^18.0.18",
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
+    "@types/react-router-dom": "^5.3.3",
     "axios-mock-adapter": "^1.19.0",
     "eslint-config-htmlacademy": "^6.0.0",
     "faker": "^5.5.3",
