--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "6.4.2",
-    "react-scripts": "5.0.1",
-    "reselect": "^4.0.0"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
